prod/pod-keycloak-postgresql.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: keycloak-postgresql
  namespace: default
  labels:
    app: keycloak-postgresql
spec:
  containers:
    - name: postgresql
      image: postgres:latest
      volumeMounts:
      - mountPath: "/var/lib/postgresql"
        name: keycloak-postgresql-volume
  volumes:
    - name: keycloak-postgresql-volume
      persistentVolumeClaim:
        claimName: keycloak-postgresql-pvc4
