prod/pod-keycloak.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: keycloak
  namespace: default
  labels:
    app: keycloak
spec:
  containers:
    - name: keycloak
      image: jboss/keycloak:latest
