prod/pod-postgresql.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: postgresql
  namespace: default
  labels:
    app: postgresql
spec:
  containers:
    - name: postgresql
      image: postgres:latest
      volumeMounts:
      - mountPath: "/var/lib/postgresql"
        name: rlgl-volume
  volumes:
    - name: rlgl-volume
      persistentVolumeClaim:
        claimName: rlgl-pvc
