prod/svc-keycloak.yaml
apiVersion: v1
kind: Service
metadata:  
  name: keycloak
  namespace: default
spec:
  selector:    
    app: keycloak
  type: ClusterIP
  ports:  
  - name: keycloak
    port: 80
    targetPort: 8080
    protocol: TCP
