prod/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-prod-rlgl-server
  namespace: default
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: rl.gl
    http:
      paths:
      - path: /
        backend:
          serviceName: rlgl-server
          servicePort: 80
